# potential-fiesta

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: backend.yaml
config/: config.py
exports/: exports.py
frontend/: .env.example  CONTRIBUTING.md  Dockerfile  bun.lockb  package.json  tailwind.config.ts  tsconfig.json
frontend/config/: config.ts
frontend/src/app/: StoreProvider.js  StoreProvider.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/components/: Loader.tsx  LoginPage.tsx  MessageState.tsx
frontend/src/app/config/: config.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/types/: Dashboard_Types.ts  Patients_Types.ts  Visit_Types.ts  chat_Types.ts
frontend/src/lib/: store.tsx
frontend/src/static/: dashboard.tsx
src/: main.py
src/application/web/controllers/: chat_controller.py  (+5 more)
src/connection_manager/: connection_manager.py
src/constants/: prompts.py
src/domain/entities/: chat.py  user.py
src/domain/interfaces/: auth_interface.py  chat_interface.py  doctor_chat_interface.py  user_interface.py
src/domain/use_cases/: auth_service.py  chat_service.py  doctor_chat_service.py  user_service.py
src/infastructure/exceptions/: exceptions.py
src/infastructure/repositories/: auth_repository.py  chat_repository.py  database_repository.py  search_repository.py  user_repository.py
tests/: test.py
tests/end_to_end/: data_transfer_test.py
tests/unit/: general_unit_test.py
(+22 files in other folders)
